# todo-actix

./: .env  Cargo.toml  README.md  database.sql  docker-compose.yml  thunder-collection_Actix-Todo.json
migrations/2022-06-09-152203_create_todos/: down.sql  up.sql
migrations/2022-06-11-141636_create_items/: down.sql  up.sql
src/: config.rs  controller.rs  handlers.rs  main.rs  models.rs  repository.rs  schema.rs
src/config/: mod.rs
src/modules/: mod.rs
src/modules/items/controller/: item_controller.rs
src/modules/items/dto/: item_dto.rs
src/modules/items/model/: item_model.rs
src/modules/items/repository/: item_repository.rs
src/modules/items/service/: item_service.rs
src/modules/todos/: mod.rs
src/modules/todos/controller/: todo_controller.rs
src/modules/todos/dto/: todo_dto.rs
src/modules/todos/model/: todo_model.rs
src/modules/todos/repository/: todo_repository.rs
src/modules/todos/service/: todo_service.rs
