[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.0.1"
serde = { version = "1.0.137", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
